--- a/website-backend/Cargo.toml
+++ b/website-backend/Cargo.toml
@@ -21,17 +21,18 @@ path = "src/lib.rs"
 [dependencies]
 tokio = { version = "1.13", features = ["full"] }
 clap = { version = "4.1", features = ["derive", "env"] }
-axum = { version = "0.6", features = ["multipart"] }
-tower-http = { version = "0.4", features = ["trace", "cors", "fs"] }
+axum = { version = "0.7.5", features = ["multipart"] }
+tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] }
 tower = { version = "0.4", features = ["util"] }
-hyper = { version = "0.14", features = ["full"] }
-http-body = "0.4"
+hyper = { version = "1.3.1", features = ["full"] }
+http-body = "1.0.0"
+http-body-util = "0.1.1"
 
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
-tracing-opentelemetry = { version = "0.19", optional = true }
-opentelemetry-jaeger = { version = "0.18", optional = true, features = ["collector_client", "reqwest_collector_client", "rt-tokio"] }
-opentelemetry = { version = "0.19", optional = true, features = ["rt-tokio"] }
+tracing-opentelemetry = { version = "0.24.0", optional = true }
+opentelemetry-jaeger = { version = "0.22.0", optional = true, features = ["collector_client", "reqwest_collector_client", "rt-tokio"] }
+opentelemetry = { version = "0.23.0", optional = true }
 
 color-eyre = { workspace = true }
 serde = { workspace = true }
